--- a/index.html
+++ b/index.html
@@ -12,13 +12,49 @@
     <div class="container-fluid">
 
         <div class="row">
-            <div class="col-md-4"></div>
+            <div class="col-md-4 px-0" id="panel-left">
+
+                <header class="d-flex">
+                    <img src="assets/contact.svg" alt="">
+                </header>
+
+                <div id="search"></div>
+
+                <div class="list-group">
+
+                    <a href="#" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <img id="foto" src="assets/foto.jpg" alt="">
+                        <div class="d-flex flex-column flex-fill">
+                            <h6>Júniior Silva</h6>
+                            <small>Juniior Silva: Desenvolvimento de um WhatsApp Clone</small>
+                        </div>
+                        <div class="d-flex flex-column align-items-center">
+                            <span class="timeago">11:25</span>
+                            <span class="badge badge-success badge-pill">999</span>
+                        </div>
+                    </a>
+
+                    <a href="#" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <img src="assets/contact.svg" alt="">
+                        <div class="d-flex flex-column flex-fill">
+                            <h6>Juniior Silva</h6>
+                            <small>Desenvolvido em Bootstrap 4</small>
+                        </div>
+                        <div class="d-flex flex-column align-items-center">
+                            <span class="timeago">Ontem</span>
+                            <span class="badge badge-success badge-pill"></span>
+                        </div>
+                    </a>
+
+                </div>
+                 
+            </div>
             <div class="col-md-8 px-0 d-flex flex-column">
 
                 <header class="d-flex alien-items-center">
                     <img src="assets/contact.svg" alt="">
                     <div class="d-flex flex-column flex-fill">
-                        <h6>JuniiorSilva</h6>
+                        <h6>Júniior Silva</h6>
                         <small class="timeago">Visto por último: Quarta-feira às 10:48</small>
                     </div>
                 </header>
